apps/client-scorexam/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: client-scorexam-stable
  namespace: ndmastery
  labels:
    app.kubernetes.io/name: client-scorexam
    app.kubernetes.io/part-of: ndmastery
    app.kubernetes.io/managed-by: argo-rollouts
    rollouts.argoproj.io/service-role: stable
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 3101
      targetPort: http
      protocol: TCP
  selector:
    app.kubernetes.io/name: client-scorexam
---
apiVersion: v1
kind: Service
metadata:
  name: client-scorexam-canary
  namespace: ndmastery
  labels:
    app.kubernetes.io/name: client-scorexam
    app.kubernetes.io/part-of: ndmastery
    app.kubernetes.io/managed-by: argo-rollouts
    rollouts.argoproj.io/service-role: canary
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 3101
      targetPort: http
      protocol: TCP
  selector:
    app.kubernetes.io/name: client-scorexam
