apps/client-scorexam/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: client-scorexam
  namespace: ndmastery
  labels:
    app.kubernetes.io/name: client-scorexam
    app.kubernetes.io/part-of: ndmastery
    app.kubernetes.io/managed-by: argo-rollouts
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`web.scorexam.com`)
      kind: Rule
      services:
        - name: client-scorexam-wrr
          kind: TraefikService
      middlewares:
        - name: ndmastery-secure-headers
        - name: ndmastery-compress
  tls:
    secretName: client-scorexam-tls
    options:
      name: ndmastery-modern-tls
      namespace: ndmastery
